2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111752 - No notification sounds after a hildon-home crash

	* configure.ac:
	* debian/hildon-home.install:
	* src/Makefile.am:
	* src/home.conf.in:
	* src/home.safe-set.in:
	* src/notification.conf.in:
	* src/notification.safe-set.in: Add new safe set of plugin defintions.

	* debian/changelog: Update.

2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110996 - Desktop, Alternative string to §tana_fi_latest§
	needed for multiple authorization requests

	* src/notification-groups.conf: Use tana_fi_latest_feminine for
	authorization requests

	* debian/changelog: Update.

2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111148 - Theme-Devel is displayed for two times in choose
	background image dialog

	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_response,
	  hd_change_background_dialog_init): Set Change background dialog
	  height to 404px.

	* debian/changelog: Update.

2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110504 - Unable to restore background image with Backup and
	restore application	

	* src/hd-backgrounds.c (queue, current_theme, set_theme_idle_id,
	  load_cache_info_cb, update_backgrounds_from_theme, set_theme_idle,
	  hd_backgrounds_theme_changed, hd_backgrounds_startup,
	  hd_backgrounds_dipose): Add support for updating backgrounds on
	  theme change . This is only done when the _MB_THEME window property
	  on the root window changes.

	* debian/changelog: Update.

2009-05-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.25
	* configure.ac: 0.3.25

2009-05-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#109445 - Unable to open received SMS when a dialog is opened
	in layout mode

	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_response):
	* src/hd-add-applet-dialog.c (hd_add_applet_dialog_response):