@@ -1,3 +1,8 @@
+2009-05-06  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/hd-notification-manager.c: Make sure everything passed to g_free
+	has been initialised first, to make sure there are no double frees.
+
 2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#111752 - No notification sounds after a hildon-home crash
